# VkTestBackendMLEngineer

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
