[tool.poetry]
name = "vktestbackendmlengineer"
version = "0.1.0"
description = "VK chat bot"
authors = ["Alexey <rybolovlevalexey@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.32.3"
vk-api = "^11.9.9"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"